--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "name": "meal-fix",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://unn-w20019235.newnumyspace.co.uk/mealfix/react/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "link-react": "^3.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
